--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
       </div>
       <div class="form-group">
         <label for="year">Year:</label>
-        <input class="form-control" type="range" name="year" min="1900" max="9999">
+        <input class="form-control" step="100" value="2000" type="range" name="year" min="1900" max="9999" oninput="showyear.value = year.valueAsNumber">
+        <output name="showyear" for="year">2000</output>
       </div>
       <div class="form-group">
         <label for="doors">Number of Doors:</label>
